# LibICE-post

./: .gitignore  .kateproject  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README  README.md  TODO  TODO.out  grep_TODOs.py  libICEpost  pyproject.toml  setup.py
Database/: Molecules.json  __init__.py
TODO/: TODO  TODO.out  grep_TODOs.py
docs/: Makefile  conf.py  example.ipynb
docs/_build/html/: .buildinfo  (+10 more)
docs/references/: chemicalDefinitions.pptx  createLaminarFlameSpeedTable.pptx
libICEpost.egg-info/: PKG-INFO  SOURCES.txt
src/: GLOBALS.py  __init__.py
src/Database/: Molecules.json  __init__.py
src/base/: Utilities.py
src/engineModel/: __init__.py
src/libICE_post.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/libICEpost/: .gitignore  GLOBALS.py  __init__.py
src/libICEpost.egg-info/: PKG-INFO  SOURCES.txt
src/thermophysicalModels/: __init__.py
templates/class/: Class.py
templates/inheritance/: Base.py  Child.py  __init__.py
testing/diesel/: combustionProperties.py  dataDict.py  diesel.py
tests/: chemistry.py  input.json  laminarFlameSpeed.py  runTimeSelection.py  test_imports.py  test_typeChecking.py
tests/Table/: tableProperties
tests/base/: test_OFTabulation.py  test_Tabulation.py  test_enum.py  test_typeChecking.py
tests/diesel/: controlDict.py  thermophysicalProperties.py
tests/sparkIgnition/: combustionProperties.py  controlDict.py  sparkIngition.py
tutorials/createLaminarFlameSpeedTable/: ch4Equi.yaml  inputDict.py
tutorials/createPremixedChemistryTable/: inputDict.py
tutorials/loadingDictionaries/: main.py
(+689 files in other folders)
