[project]
name = "libICEpost"
version = "0.0.1"

authors = [
  { name="Federico Ramognino", email="federico.ramognino@polimi.it" },
]
description = "Postprocessing of data sampled from internal combustion engines (Experimental, 1D/0D (Gasdyn), 3D (LibICE), etc.)"
readme = "README.md"

requires-python = ">=3.7"
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["libICEpost"]
[project.scripts]

[project.urls]
Homepage = "https://github.com/RamogninoF/LibICE-post"
Issues = "https://github.com/RamogninoF/LibICE-post/issues"
